<resources>
    <string name="app_name">Saiko</string>
    <string name="welcome_to">Welcome to</string>
    <string name="saiko">SAIKO</string>
    <string name="shop_everything">Shop everything you need</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="footer_text">By logging in you accept our</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="account">Account</string>
    <string name="category1">Category 1</string>
    <string name="category2">Category 2</string>
    <string name="category3">Category 3</string>
    <string name="category4">Category 4</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="application_id">com.dicoding.capstone.saiko</string>
    <string name="detail_name_user">Nama</string>
    <string name="detail_desc_user">deskripsi</string>
    <string name="detail_desc_foto">foto</string>
    <string name="message_text">Message Text</string>
    <string name="message_time">Message Time</string>
    <string name="chat_name">Name</string>
    <string name="chat_last_message">Last message</string>
    <string name="chat_time">12:00</string>
    <string name="guest_warning_message">Maaf Anda belum terdaftar sebagai penjual. Silahkan isi biodata diri Anda terlebih dahulu dan mulai berjualan!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_guest_account">Login with guest account</string>
    <string name="ikan_segar">Ikan Segar</string>
    <string name="sayur_sayuran">Sayur-sayuran</string>
</resources>