<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.register.RegisterActivity">

    <!-- Top Green Background -->

    <!-- Logo -->
    <View
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-78dp"
        android:background="@drawable/latar_hijau" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_saiko" />

    <!-- Registration Card -->

    <!-- Login Link -->
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="477dp"
        android:layout_below="@id/logo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/create_a_new_account"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_username"
            android:padding="10dp" />

        <!-- Phone Number Field -->
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_phone_number"
            android:padding="10dp" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_email_address"
            android:padding="10dp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- Confirm Password Field -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_confirm_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- Create Account Button -->
        <Button
            android:id="@+id/create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/palet"
            android:text="@string/create_account"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            android:textColor="@color/palet"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
