<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.login.LoginActivity">

    <!-- Top Green Background -->
    <View
        android:id="@+id/top_background"
        android:layout_width="match_parent"
        android:layout_height="573dp"
        android:layout_marginTop="-90dp"
        android:background="@drawable/latar_hijau"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_saiko"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <!-- Login Card -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:elevation="5dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/to_continue"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!-- Username Field -->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_username"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill,TextFields" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#757575"
            tools:ignore="Autofill" />

        <!-- Forgot Password -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/palet"
            android:text="@string/login"
            android:textColor="#5D4037" />

        <!-- Register Link -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_a_account"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textColor="#689F38"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
